# safeR

./: Cargo.toml  LICENSE  README.md
src/: args.rs  decrypt_file.rs  encrypt_file.rs  file.rs  generate_key.rs  handlers.rs  main.rs
