[package]
name = "safeR"
version = "0.1.2"
authors = ["Mateusz Czarnecki (DemwE)"]
description = "A simple and secure file encryption tool"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.1"
walkdir = "2.3.2"
rand = "0.8.5"
anyhow = "1.0.79"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
sha2 = "0.10.8"
arrayref = "0.3.6"
tokio = {version = "1.36.0" , features = ["full"]}
futures = "0.3.30"
indicatif = "0.17.7"
